refactor: location version choosing moved to LocationVersionResolver
Refs: XRDDEV-2534

--- a/src/configuration-client/build.gradle
+++ b/src/configuration-client/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation libs.commons.cli
 
     testImplementation project(':common:common-test')
+    testImplementation libs.wiremock.standalone
 }
 
 ext {
