--- a/src/signer-protocol/build.gradle
+++ b/src/signer-protocol/build.gradle
@@ -26,7 +26,7 @@ protobuf {
         grpc { artifact = libs.grpc.protocGenGrpcJava.get().toString() }
     }
     generateProtoTasks {
-        all()*.plugins { grpc { option('jakarta_omit') } }
+        all()*.plugins { grpc { option('@generated=omit') } }
     }
 }
 
