--- a/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
+++ b/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
@@ -6,20 +6,24 @@ dependencies {
     implementation libs.edc.boot
     implementation libs.edc.policy.engine.spi
 
-    implementation(libs.edc.identity.trust.core)
-        {
-            exclude group: 'org.eclipse.edc', module: 'verifiable-credentials' // we use our own fork of it to customize validation rules
-            exclude group: 'org.eclipse.edc', module: 'ldp-verifiable-credentials'
-            // we use our own fork of it in order to verify Gaia-X signatures
-        }
+    implementation(libs.edc.identity.trust.core) {
+        // we use our own fork of it in order to verify Gaia-X signatures
+        exclude group: 'org.eclipse.edc', module: 'ldp-verifiable-credentials'
+    }
 
+    implementation(libs.edc.identity.trust.service)
     implementation libs.edc.jersey.providers.lib
     implementation libs.edc.transform.lib
     implementation libs.edc.crypto.common.lib
+    implementation(libs.edc.verifiable.credentials)
     implementation libs.edc.jsonLd.spi
+    implementation libs.edc.jsonLd.lib
+    implementation libs.edc.jsonLd
     implementation libs.edc.jws2020.lib
     implementation libs.edc.token.core
     implementation libs.edc.util.lib
+
+    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 
     constraints {
         // Overwrite the default 1.1 version to fix RDF normalization inconsistencies
