feat: acme support for auth and sign keys
Moved ACME challenge from proxy to proxy-ui-api

refs: XRDDEV-2534

--- a/Docker/testca/files/acme_srv.cfg
+++ b/Docker/testca/files/acme_srv.cfg
@@ -23,8 +23,9 @@ openssl_conf: /home/ca/CA/CA.cnf
 #cn_enforce: True
 
 #[EABhandler]
-#eab_handler_file: examples/eab_handler/file_handler.py
-#key_file: examples/eab_handler/key_file.csv
+#eab_handler_file: examples/eab_handler/kid_profile_handler.py
+#key_file: examples/eab_handler/kid_profiles.json
+
 
 [DBhandler]
 #dbfile: /var/lib/acme/db.sqlite3
