--- a/src/security-server/admin-service/application/src/main/resources/common-application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/common-application.yml
@@ -20,11 +20,24 @@ spring:
 # server.servlet.session.timeout=1m
 server:
   port: 4000
+  # TLS
+  # (can be overridden with external ssl.properties)
+  ssl:
+    key-store: /etc/xroad/ssl/proxy-ui-api.p12
+    key-store-password: proxy-ui-api
+    enabled: true
+    ciphers: TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+    protocol: TLS
+    enabled-protocols: TLSv1.2
   servlet:
     session:
       cookie:
         secure: true
         same-site: Strict
+  compression:
+    enabled: true
+    mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css,image/jpeg
+
 
 xroad:
   proxy-ui-api:
