--- a/src/security-server/edc/extensions/xroad-policy/build.gradle
+++ b/src/security-server/edc/extensions/xroad-policy/build.gradle
@@ -6,7 +6,9 @@ dependencies {
     implementation libs.edc.core.spi
     implementation libs.edc.policy.engine.spi
 
-    implementation(project(':common:common-domain'))
+    implementation(project(':common:common-domain')) {
+        exclude group: 'org.eclipse.jetty'
+    }
     implementation(project(':common:common-verifier')) {
         exclude group: 'org.eclipse.jetty'
     }
