chore: using hashicorp vault instead of filesystem

--- a/Docker/centralserver/files/edc/etc/edc-connector.properties
+++ b/Docker/centralserver/files/edc/etc/edc-connector.properties
@@ -36,3 +36,6 @@ xroad.messagelog.enabled=true
 edc.catalog.cache.execution.delay.seconds=5
 edc.catalog.cache.execution.period.seconds=20
 edc.catalog.cache.partition.num.crawlers=2
+
+edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
