--- a/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
@@ -21,3 +21,6 @@ edc.iam.did.web.use.https=true
 # Identity Hub
 edc.ih.iam.id=did:web:localhost
 edc.ih.iam.publickey.alias=did:web:localhost
+
+edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
