--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -14,8 +14,8 @@ web.http.control.port=9192
 web.http.control.path=/control
 
 edc.dsp.callback.address=https://localhost:9194/protocol
-edc.transfer.dataplane.token.signer.privatekey.alias=did:web:localhost
-edc.transfer.proxy.token.signer.privatekey.alias=did:web:localhost
+edc.transfer.dataplane.token.signer.privatekey.alias=did:web:localhost-private-key
+edc.transfer.proxy.token.signer.privatekey.alias=did:web:localhost-private-key
 edc.transfer.proxy.token.verifier.publickey.alias=did:web:localhost
 
 edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
@@ -27,7 +27,7 @@ edc.iam.issuer.id=did:web:localhost
 #TODO switch to d
 #edc.iam.sts.privatekey.alias=alias_localhost
 #edc.iam.sts.publickey.id=did:web:localhost#key-id
-edc.iam.sts.privatekey.alias=did:web:localhost
+edc.iam.sts.privatekey.alias=did:web:localhost-private-key
 edc.iam.sts.publickey.id=did:web:localhost#key-id
 
 
@@ -41,3 +41,6 @@ edc.jsonld.http.enabled=true
 
 # x-Road configuration
 xroad.messagelog.enabled=true
+
+edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
