--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -15,7 +15,7 @@ edc.http.client.https.enforce=true
 
 ### IAM ###
 edc.iam.issuer.id=did:web:localhost
-edc.iam.sts.privatekey.alias=did:web:localhost
+edc.iam.sts.privatekey.alias=did:web:localhost-private-key
 edc.iam.did.web.use.https=true
 
 # Support for JSON-LD (verifiable credentials)
@@ -30,3 +30,6 @@ edc.agent.identity.key=https://registry.lab.gaia-x.eu/development/api/trusted-sh
 
 # X-Road custom props
 edc.ih.credentials.path=/etc/xroad-edc/credentials
+
+edc.vault.hashicorp.url=http://127.0.0.1:8200
+edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
