feat: edc data plane signaling flow

--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -18,6 +18,7 @@ edc.transfer.dataplane.token.signer.privatekey.alias=did:web:localhost
 edc.transfer.proxy.token.signer.privatekey.alias=did:web:localhost
 edc.transfer.proxy.token.verifier.publickey.alias=did:web:localhost
 
+edc.edr.receiver.sync=true
 edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
 
 edc.http.client.https.enforce=true
