chore: improve edc negotiation and transfer performance

--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -45,3 +45,8 @@ xroad.messagelog.enabled=true
 
 edc.vault.hashicorp.url=http://127.0.0.1:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
+
+edc.negotiation.state-machine.iteration-wait-millis=300
+edc.transfer.state-machine.iteration-wait-millis=300
+edc.dataplane.state-machine.iteration-wait-millis=300
+edc.policy.monitor.state-machine.iteration-wait-millis=300
