--- a/src/security-server/edc/runtime/connector/build.gradle
+++ b/src/security-server/edc/runtime/connector/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation libs.bundles.edc.sql.store
 
     // x-road extensions
+    implementation(project(":security-server:edc:extensions:xroad-jsonld"))
     implementation(project(":security-server:edc:extensions:xroad-messagelog")) {
         exclude group: 'org.eclipse.jetty'
     }
