--- a/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
+++ b/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     implementation libs.edc.boot
     implementation libs.edc.policy.engine.spi
 
+    implementation(project(":security-server:edc:extensions:xroad-jsonld"))
+
     implementation(libs.edc.identity.trust.core)
         {
             exclude group: 'org.eclipse.edc', module: 'verifiable-credentials' // we use our own fork of it to customize validation rules
@@ -21,14 +23,6 @@ dependencies {
     implementation libs.edc.token.core
     implementation libs.edc.util.lib
     api libs.apache.commonsLang3
-    api libs.jackson.jsonP
-    api libs.jackson.datatypeJsr310
-
-    constraints {
-        // Overwrite the default 1.1 version to fix RDF normalization inconsistencies
-        add("implementation", "com.apicatalog:titanium-json-ld:1.4.0")
-        add("implementation", "io.setl:rdf-urdna:1.3")
-    }
 }
 
 checkstyle {
